force-app/main/default/objects/child2__c/child2__c.object-meta.xml
<CustomObject>
    <label>child2</label>
    <nameField>
        <label>child2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>child2s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>