force-app/main/default/objects/child2__c/fields/child__c.field-meta.xml
<CustomField>
    <fullName>child__c</fullName>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>child2s</relationshipLabel>
    <relationshipName>child2s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>