force-app/main/default/objects/child2__c/fields/Data_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Data_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Migrated</label>
    <type>Checkbox</type>
</CustomField>